--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "rtsp-ffmpeg": "^0.0.17",
     "ws": "^8.14.2"
   }
 }
