--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "rtsp-ffmpeg": "^0.0.17",
+    "sonos": "^1.14.1",
     "ws": "^8.14.2"
   }
 }
